kubernetes/apps/default/weave-gitops/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
    hajimari.io/icon: sawtooth-wave
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "gitops.${SECRET_DOMAIN}"
      secretName: "weave-gitops-tls"
  rules:
    - host: "gitops.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
